# trico

./: .gitignore  pyproject.toml
comments/: models.py
comments/migrations/: 0001_initial.py  0002_comment_like.py  0002_comment_share.py
core/: settings.py
