[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["chienchuanw <chienchuanwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
